--- a/projects/11/Average/Main.vm
+++ b/projects/11/Average/Main.vm
@@ -44,14 +44,14 @@ call Array.new 1
 pop local 0
 push constant 0
 pop local 2
-label L0
+label WHILE_EXP0
 push local 2
 push local 1
 lt
 not
-if-goto L1
-push local 0
+if-goto WHILE_END0
 push local 2
+push local 0
 add
 push constant 16
 call String.new 1
@@ -93,8 +93,8 @@ pop pointer 1
 push temp 0
 pop that 0
 push local 3
-push local 0
 push local 2
+push local 0
 add
 pop pointer 1
 push that 0
@@ -104,8 +104,8 @@ push local 2
 push constant 1
 add
 pop local 2
-goto L0
-label L1
+goto WHILE_EXP0
+label WHILE_END0
 push constant 15
 call String.new 1
 push constant 84
