--- a/projects/11/ComplexArrays/Main.vm
+++ b/projects/11/ComplexArrays/Main.vm
@@ -8,39 +8,39 @@ pop local 1
 push constant 1
 call Array.new 1
 pop local 2
-push local 0
 push constant 3
+push local 0
 add
 push constant 2
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 0
 push constant 4
+push local 0
 add
 push constant 8
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 0
 push constant 5
+push local 0
 add
 push constant 4
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 1
-push local 0
 push constant 3
+push local 0
 add
 pop pointer 1
 push that 0
+push local 1
 add
-push local 0
 push constant 3
+push local 0
 add
 pop pointer 1
 push that 0
@@ -50,30 +50,29 @@ pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 0
-push local 1
-push local 0
 push constant 3
+push local 0
 add
 pop pointer 1
 push that 0
+push local 1
 add
 pop pointer 1
 push that 0
+push local 0
 add
-push local 0
-push local 0
 push constant 5
-add
-pop pointer 1
-push that 0
-add
-pop pointer 1
-push that 0
-push local 1
-push constant 7
 push local 0
+add
+pop pointer 1
+push that 0
+push local 0
+add
+pop pointer 1
+push that 0
+push constant 7
 push constant 3
+push local 0
 add
 pop pointer 1
 push that 0
@@ -83,6 +82,7 @@ call Main.double 1
 sub
 push constant 1
 add
+push local 1
 add
 pop pointer 1
 push that 0
@@ -91,16 +91,16 @@ pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 2
 push constant 0
+push local 2
 add
 push constant 0
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 2
 push constant 0
+push local 2
 add
 pop pointer 1
 push that 0
@@ -195,8 +195,8 @@ push constant 32
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-push local 1
 push constant 2
+push local 1
 add
 pop pointer 1
 push that 0
@@ -296,8 +296,8 @@ push constant 32
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-push local 0
 push constant 5
+push local 0
 add
 pop pointer 1
 push that 0
@@ -405,56 +405,57 @@ pop local 2
 push local 2
 push constant 0
 eq
-not
-if-goto L0
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push local 0
 push constant 10
 call Main.fill 2
 pop temp 0
-push local 0
 push constant 3
+push local 0
 add
 pop pointer 1
 push that 0
 pop local 2
-push local 2
 push constant 1
+push local 2
 add
 push constant 33
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 0
 push constant 7
+push local 0
 add
 pop pointer 1
 push that 0
 pop local 2
-push local 2
 push constant 1
+push local 2
 add
 push constant 77
 pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-push local 0
 push constant 3
+push local 0
 add
 pop pointer 1
 push that 0
 pop local 1
-push local 1
 push constant 1
+push local 1
 add
-push local 1
 push constant 1
+push local 1
 add
 pop pointer 1
 push that 0
-push local 2
 push constant 1
+push local 2
 add
 pop pointer 1
 push that 0
@@ -463,7 +464,7 @@ pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-label L0
+label IF_FALSE0
 push constant 44
 call String.new 1
 push constant 84
@@ -556,8 +557,8 @@ push constant 32
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-push local 2
 push constant 1
+push local 2
 add
 pop pointer 1
 push that 0
@@ -659,8 +660,8 @@ push constant 32
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-push local 1
 push constant 1
+push local 1
 add
 pop pointer 1
 push that 0
@@ -670,24 +671,24 @@ call Output.println 0
 pop temp 0
 push constant 0
 return
-function Main.double 3
+function Main.double 0
 push argument 0
 push constant 2
 call Math.multiply 2
 return
-function Main.fill 3
-label L1
-push argument 2
+function Main.fill 0
+label WHILE_EXP0
+push argument 1
 push constant 0
 gt
 not
-if-goto L2
-push argument 2
+if-goto WHILE_END0
+push argument 1
 push constant 1
 sub
-pop argument 2
+pop argument 1
 push argument 1
-push argument 2
+push argument 0
 add
 push constant 3
 call Array.new 1
@@ -695,7 +696,7 @@ pop temp 0
 pop pointer 1
 push temp 0
 pop that 0
-goto L1
-label L2
+goto WHILE_EXP0
+label WHILE_END0
 push constant 0
 return
