--- a/projects/11/ConvertToBin/Main.vm
+++ b/projects/11/ConvertToBin/Main.vm
@@ -13,94 +13,97 @@ call Main.convert 1
 pop temp 0
 push constant 0
 return
-function Main.convert 4
+function Main.convert 3
 push constant 0
 not
-pop local 3
-label L0
-push local 3
-not
-if-goto L1
+pop local 2
+label WHILE_EXP0
 push local 2
+not
+if-goto WHILE_END0
+push local 1
 push constant 1
 add
-pop local 2
-push local 1
-call Main.nextMask 1
 pop local 1
-push local 2
+push local 0
+call Main.nextMask 1
+pop local 0
+push local 1
 push constant 16
 gt
 not
-not
-if-goto L2
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push argument 0
-push local 1
+push local 0
 and
 push constant 0
 eq
 not
-not
-if-goto L3
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push constant 8000
-push local 2
+push local 1
 add
 push constant 1
 call Memory.poke 2
 pop temp 0
-goto L4
-label L3
+goto IF_END1
+label IF_FALSE1
 push constant 8000
-push local 2
+push local 1
 add
 push constant 0
 call Memory.poke 2
 pop temp 0
-label L4
-goto L5
-label L2
+label IF_END1
+goto IF_END0
+label IF_FALSE0
 push constant 0
-pop local 3
-label L5
-goto L0
-label L1
+pop local 2
+label IF_END0
+goto WHILE_EXP0
+label WHILE_END0
 push constant 0
 return
-function Main.nextMask 4
-push argument 1
+function Main.nextMask 0
+push argument 0
 push constant 0
 eq
-not
-if-goto L6
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 1
 return
-goto L7
-label L6
-push argument 1
+goto IF_END0
+label IF_FALSE0
+push argument 0
 push constant 2
 call Math.multiply 2
 return
-label L7
-function Main.fillMemory 4
-label L8
-push argument 3
+label IF_END0
+function Main.fillMemory 0
+label WHILE_EXP0
+push argument 1
 push constant 0
 gt
 not
-if-goto L9
+if-goto WHILE_END0
+push argument 0
 push argument 2
-push argument 4
 call Memory.poke 2
 pop temp 0
-push argument 3
+push argument 1
 push constant 1
 sub
-pop argument 3
-push argument 2
+pop argument 1
+push argument 0
 push constant 1
 add
-pop argument 2
-goto L8
-label L9
+pop argument 0
+goto WHILE_EXP0
+label WHILE_END0
 push constant 0
 return
