--- a/projects/11/Pong/Ball.vm
+++ b/projects/11/Pong/Ball.vm
@@ -3,23 +3,23 @@ push constant 15
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop field 0
+pop this 0
 push argument 1
-pop field 1
+pop this 1
 push argument 2
-pop field 10
+pop this 10
 push argument 3
 push constant 6
 sub
-pop field 11
+pop this 11
 push argument 4
-pop field 12
+pop this 12
 push argument 5
 push constant 6
 sub
-pop field 13
+pop this 13
 push constant 0
-pop field 14
+pop this 14
 push pointer 0
 call Ball.show 1
 pop temp 0
@@ -59,12 +59,12 @@ return
 function Ball.draw 0
 push argument 0
 pop pointer 0
-push field 0
-push field 1
-push field 0
+push this 0
+push this 1
+push this 0
 push constant 5
 add
-push field 1
+push this 1
 push constant 5
 add
 call Screen.drawRectangle 4
@@ -74,353 +74,370 @@ return
 function Ball.getLeft 0
 push argument 0
 pop pointer 0
-push field 0
+push this 0
 return
 function Ball.getRight 0
 push argument 0
 pop pointer 0
-push field 0
+push this 0
 push constant 5
 add
 return
 function Ball.setDestination 3
 push argument 0
 pop pointer 0
-push argument 6
-push field 0
+push argument 1
+push this 0
 sub
-pop field 2
-push argument 7
-push field 1
+pop this 2
+push argument 2
+push this 1
 sub
-pop field 3
-push field 2
+pop this 3
+push this 2
 call Math.abs 1
 pop local 0
-push field 3
+push this 3
 call Math.abs 1
 pop local 1
 push local 0
 push local 1
 lt
-pop field 7
-push field 7
-not
-if-goto L0
+pop this 7
+push this 7
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push local 0
 pop local 2
 push local 1
 pop local 0
 push local 2
 pop local 1
-push field 1
-push argument 7
+push this 1
+push argument 2
 lt
-pop field 8
-push field 0
-push argument 6
+pop this 8
+push this 0
+push argument 1
 lt
-pop field 9
-goto L1
-label L0
-push field 0
-push argument 6
+pop this 9
+goto IF_END0
+label IF_FALSE0
+push this 0
+push argument 1
 lt
-pop field 8
-push field 1
-push argument 7
+pop this 8
+push this 1
+push argument 2
 lt
-pop field 9
-label L1
+pop this 9
+label IF_END0
 push constant 2
 push local 1
 call Math.multiply 2
 push local 0
 sub
-pop field 4
+pop this 4
 push constant 2
 push local 1
 call Math.multiply 2
-pop field 5
+pop this 5
 push constant 2
 push local 1
 push local 0
 sub
 call Math.multiply 2
-pop field 6
+pop this 6
 push constant 0
 return
-function Ball.move 3
+function Ball.move 0
 push argument 0
 pop pointer 0
 push pointer 0
 call Ball.hide 1
 pop temp 0
-push field 4
+push this 4
 push constant 0
 lt
-not
-if-goto L2
-push field 4
-push field 5
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 4
+push this 5
 add
-pop field 4
-goto L3
-label L2
-push field 4
-push field 6
+pop this 4
+goto IF_END0
+label IF_FALSE0
+push this 4
+push this 6
 add
-pop field 4
-push field 9
-not
-if-goto L4
-push field 7
-not
-if-goto L5
-push field 0
+pop this 4
+push this 9
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push this 7
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push this 0
 push constant 4
 add
-pop field 0
-goto L6
-label L5
-push field 1
+pop this 0
+goto IF_END2
+label IF_FALSE2
+push this 1
 push constant 4
 add
-pop field 1
-label L6
-goto L7
-label L4
-push field 7
-not
-if-goto L8
-push field 0
+pop this 1
+label IF_END2
+goto IF_END1
+label IF_FALSE1
+push this 7
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
+push this 0
 push constant 4
 sub
-pop field 0
-goto L9
-label L8
-push field 1
+pop this 0
+goto IF_END3
+label IF_FALSE3
+push this 1
 push constant 4
 sub
-pop field 1
-label L9
-label L7
-label L3
-push field 8
-not
-if-goto L10
-push field 7
-not
-if-goto L11
-push field 1
+pop this 1
+label IF_END3
+label IF_END1
+label IF_END0
+push this 8
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
+push this 7
+if-goto IF_TRUE5
+goto IF_FALSE5
+label IF_TRUE5
+push this 1
 push constant 4
 add
-pop field 1
-goto L12
-label L11
-push field 0
+pop this 1
+goto IF_END5
+label IF_FALSE5
+push this 0
 push constant 4
 add
-pop field 0
-label L12
-goto L13
-label L10
-push field 7
-not
-if-goto L14
-push field 1
+pop this 0
+label IF_END5
+goto IF_END4
+label IF_FALSE4
+push this 7
+if-goto IF_TRUE6
+goto IF_FALSE6
+label IF_TRUE6
+push this 1
 push constant 4
 sub
-pop field 1
-goto L15
-label L14
-push field 0
+pop this 1
+goto IF_END6
+label IF_FALSE6
+push this 0
 push constant 4
 sub
-pop field 0
-label L15
-label L13
-push field 0
-push field 10
+pop this 0
+label IF_END6
+label IF_END4
+push this 0
+push this 10
 gt
 not
-not
-if-goto L16
+if-goto IF_TRUE7
+goto IF_FALSE7
+label IF_TRUE7
 push constant 1
-pop field 14
-push field 10
-pop field 0
-label L16
-push field 0
-push field 11
+pop this 14
+push this 10
+pop this 0
+label IF_FALSE7
+push this 0
+push this 11
 lt
 not
-not
-if-goto L17
+if-goto IF_TRUE8
+goto IF_FALSE8
+label IF_TRUE8
 push constant 2
-pop field 14
-push field 11
-pop field 0
-label L17
-push field 1
-push field 12
+pop this 14
+push this 11
+pop this 0
+label IF_FALSE8
+push this 1
+push this 12
 gt
 not
-not
-if-goto L18
+if-goto IF_TRUE9
+goto IF_FALSE9
+label IF_TRUE9
 push constant 3
-pop field 14
-push field 12
-pop field 1
-label L18
-push field 1
-push field 13
+pop this 14
+push this 12
+pop this 1
+label IF_FALSE9
+push this 1
+push this 13
 lt
 not
-not
-if-goto L19
+if-goto IF_TRUE10
+goto IF_FALSE10
+label IF_TRUE10
 push constant 4
-pop field 14
-push field 13
-pop field 1
-label L19
+pop this 14
+push this 13
+pop this 1
+label IF_FALSE10
 push pointer 0
 call Ball.show 1
 pop temp 0
-push field 14
+push this 14
 return
-function Ball.bounce 8
+function Ball.bounce 5
 push argument 0
 pop pointer 0
-push field 2
+push this 2
 push constant 10
 call Math.divide 2
-pop local 5
-push field 3
+pop local 2
+push this 3
 push constant 10
 call Math.divide 2
-pop local 6
-push argument 8
+pop local 3
+push argument 1
 push constant 0
 eq
-not
-if-goto L20
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 10
-pop local 7
-goto L21
-label L20
-push field 2
+pop local 4
+goto IF_END0
+label IF_FALSE0
+push this 2
 push constant 0
 lt
 not
-push argument 8
+push argument 1
 push constant 1
 eq
 and
-push field 2
+push this 2
 push constant 0
 lt
-push argument 8
+push argument 1
 push constant 1
 neg
 eq
 and
 or
-not
-if-goto L22
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
 push constant 20
-pop local 7
-goto L23
-label L22
+pop local 4
+goto IF_END1
+label IF_FALSE1
 push constant 5
-pop local 7
-label L23
-label L21
-push field 14
+pop local 4
+label IF_END1
+label IF_END0
+push this 14
 push constant 1
 eq
-not
-if-goto L24
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
 push constant 506
-pop local 3
-push local 6
+pop local 0
+push local 3
 push constant 50
 neg
 call Math.multiply 2
-push local 5
+push local 2
 call Math.divide 2
-pop local 4
-push field 1
+pop local 1
+push this 1
+push local 1
 push local 4
-push local 7
 call Math.multiply 2
 add
-pop local 4
-goto L25
-label L24
-push field 14
+pop local 1
+goto IF_END2
+label IF_FALSE2
+push this 14
 push constant 2
 eq
-not
-if-goto L26
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 0
-pop local 3
-push local 6
+pop local 0
+push local 3
 push constant 50
 call Math.multiply 2
-push local 5
+push local 2
 call Math.divide 2
-pop local 4
-push field 1
+pop local 1
+push this 1
+push local 1
 push local 4
-push local 7
 call Math.multiply 2
 add
-pop local 4
-goto L27
-label L26
-push field 14
+pop local 1
+goto IF_END3
+label IF_FALSE3
+push this 14
 push constant 3
 eq
-not
-if-goto L28
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
 push constant 250
-pop local 4
-push local 5
+pop local 1
+push local 2
 push constant 25
 neg
 call Math.multiply 2
-push local 6
-call Math.divide 2
-pop local 3
-push field 0
 push local 3
-push local 7
+call Math.divide 2
+pop local 0
+push this 0
+push local 0
+push local 4
 call Math.multiply 2
 add
-pop local 3
-goto L29
-label L28
+pop local 0
+goto IF_END4
+label IF_FALSE4
 push constant 0
-pop local 4
-push local 5
+pop local 1
+push local 2
 push constant 25
 call Math.multiply 2
-push local 6
-call Math.divide 2
-pop local 3
-push field 0
 push local 3
-push local 7
+call Math.divide 2
+pop local 0
+push this 0
+push local 0
+push local 4
 call Math.multiply 2
 add
-pop local 3
-label L29
-label L27
-label L25
-push local 3
-push local 4
+pop local 0
+label IF_END4
+label IF_END3
+label IF_END2
 push pointer 0
+push local 0
+push local 1
 call Ball.setDestination 3
 pop temp 0
 push constant 0
