--- a/projects/11/Pong/PongGame.vm
+++ b/projects/11/Pong/PongGame.vm
@@ -5,13 +5,13 @@ pop pointer 0
 call Screen.clearScreen 0
 pop temp 0
 push constant 50
-pop field 6
+pop this 6
 push constant 230
 push constant 229
-push field 6
+push this 6
 push constant 7
 call Bat.new 4
-pop field 0
+pop this 0
 push constant 253
 push constant 222
 push constant 0
@@ -19,8 +19,8 @@ push constant 511
 push constant 0
 push constant 229
 call Ball.new 6
-pop field 1
-push field 1
+pop this 1
+push this 1
 push constant 400
 push constant 0
 call Ball.setDestination 3
@@ -56,22 +56,22 @@ call String.appendChar 2
 call Output.printString 1
 pop temp 0
 push constant 0
-pop field 3
+pop this 3
 push constant 0
-pop field 4
+pop this 4
 push constant 0
-pop field 2
+pop this 2
 push constant 0
-pop field 5
+pop this 5
 push pointer 0
 return
 function PongGame.dispose 0
 push argument 0
 pop pointer 0
-push field 0
+push this 0
 call Bat.dispose 1
 pop temp 0
-push field 1
+push this 1
 call Ball.dispose 1
 pop temp 0
 push pointer 0
@@ -90,23 +90,23 @@ return
 function PongGame.run 1
 push argument 0
 pop pointer 0
-label L0
-push field 3
+label WHILE_EXP0
+push this 3
 not
 not
-if-goto L1
-label L2
+if-goto WHILE_END0
+label WHILE_EXP1
 push local 0
 push constant 0
 eq
-push field 3
+push this 3
 not
 and
 not
-if-goto L3
+if-goto WHILE_END1
 call Keyboard.keyPressed 0
 pop local 0
-push field 0
+push this 0
 call Bat.move 1
 pop temp 0
 push pointer 0
@@ -115,54 +115,57 @@ pop temp 0
 push constant 50
 call Sys.wait 1
 pop temp 0
-goto L2
-label L3
+goto WHILE_EXP1
+label WHILE_END1
 push local 0
 push constant 130
 eq
-not
-if-goto L4
-push field 0
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 0
 push constant 1
 call Bat.setDirection 2
 pop temp 0
-goto L5
-label L4
+goto IF_END0
+label IF_FALSE0
 push local 0
 push constant 132
 eq
-not
-if-goto L6
-push field 0
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push this 0
 push constant 2
 call Bat.setDirection 2
 pop temp 0
-goto L7
-label L6
+goto IF_END1
+label IF_FALSE1
 push local 0
 push constant 140
 eq
-not
-if-goto L8
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
 push constant 0
 not
-pop field 3
-label L8
-label L7
-label L5
-label L9
+pop this 3
+label IF_FALSE2
+label IF_END1
+label IF_END0
+label WHILE_EXP2
 push local 0
 push constant 0
 eq
 not
-push field 3
+push this 3
 not
 and
 not
-if-goto L10
+if-goto WHILE_END2
 call Keyboard.keyPressed 0
 pop local 0
-push field 0
+push this 0
 call Bat.move 1
 pop temp 0
 push pointer 0
@@ -171,13 +174,14 @@ pop temp 0
 push constant 50
 call Sys.wait 1
 pop temp 0
-goto L9
-label L10
-goto L0
-label L1
-push field 3
-not
-if-goto L11
+goto WHILE_EXP2
+label WHILE_END2
+goto WHILE_EXP0
+label WHILE_END0
+push this 3
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 10
 push constant 27
 call Output.moveCursor 2
@@ -204,106 +208,111 @@ push constant 114
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
-label L11
+label IF_FALSE3
 push constant 0
 return
-function PongGame.moveBall 6
+function PongGame.moveBall 5
 push argument 0
 pop pointer 0
-push field 1
+push this 1
 call Ball.move 1
-pop field 2
-push field 2
+pop this 2
+push this 2
 push constant 0
 gt
-push field 2
-push field 5
+push this 2
+push this 5
 eq
 not
 and
-not
-if-goto L12
-push field 2
-pop field 5
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push this 2
+pop this 5
 push constant 0
-pop local 1
-push field 0
+pop local 0
+push this 0
 call Bat.getLeft 1
-pop local 2
-push field 0
+pop local 1
+push this 0
 call Bat.getRight 1
-pop local 3
-push field 1
+pop local 2
+push this 1
 call Ball.getLeft 1
-pop local 4
-push field 1
+pop local 3
+push this 1
 call Ball.getRight 1
-pop local 5
-push field 2
+pop local 4
+push this 2
 push constant 4
 eq
-not
-if-goto L13
-push local 2
-push local 5
-gt
-push local 3
+if-goto IF_TRUE1
+goto IF_FALSE1
+label IF_TRUE1
+push local 1
 push local 4
+gt
+push local 2
+push local 3
 lt
 or
-pop field 3
-push field 3
+pop this 3
+push this 3
 not
-not
-if-goto L14
-push local 5
-push local 2
+if-goto IF_TRUE2
+goto IF_FALSE2
+label IF_TRUE2
+push local 4
+push local 1
 push constant 10
 add
 lt
-not
-if-goto L15
+if-goto IF_TRUE3
+goto IF_FALSE3
+label IF_TRUE3
 push constant 1
 neg
-pop local 1
-goto L16
-label L15
-push local 4
+pop local 0
+goto IF_END3
+label IF_FALSE3
 push local 3
+push local 2
 push constant 10
 sub
 gt
-not
-if-goto L17
+if-goto IF_TRUE4
+goto IF_FALSE4
+label IF_TRUE4
 push constant 1
-pop local 1
-label L17
-label L16
-push field 6
+pop local 0
+label IF_FALSE4
+label IF_END3
+push this 6
 push constant 2
 sub
-pop field 6
-push field 0
-push field 6
+pop this 6
+push this 0
+push this 6
 call Bat.setWidth 2
 pop temp 0
-push field 4
+push this 4
 push constant 1
 add
-pop field 4
+pop this 4
 push constant 22
 push constant 7
 call Output.moveCursor 2
 pop temp 0
-push field 4
+push this 4
 call Output.printInt 1
 pop temp 0
-label L14
-label L13
-push field 1
-push local 1
+label IF_FALSE2
+label IF_FALSE1
+push this 1
+push local 0
 call Ball.bounce 2
 pop temp 0
-label L12
+label IF_FALSE0
 push constant 0
 return
