--- a/projects/11/Square/Square.vm
+++ b/projects/11/Square/Square.vm
@@ -3,11 +3,11 @@ push constant 3
 call Memory.alloc 1
 pop pointer 0
 push argument 0
-pop field 0
+pop this 0
 push argument 1
-pop field 1
+pop this 1
 push argument 2
-pop field 2
+pop this 2
 push pointer 0
 call Square.draw 1
 pop temp 0
@@ -28,13 +28,13 @@ push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 0
-push field 2
+push this 0
+push this 1
+push this 0
+push this 2
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
@@ -46,13 +46,13 @@ pop pointer 0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 0
-push field 2
+push this 0
+push this 1
+push this 0
+push this 2
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
@@ -61,238 +61,244 @@ return
 function Square.incSize 0
 push argument 0
 pop pointer 0
-push field 1
-push field 2
+push this 1
+push this 2
 add
 push constant 254
 lt
-push field 0
-push field 2
+push this 0
+push this 2
 add
 push constant 510
 lt
 and
-not
-if-goto L0
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push pointer 0
 call Square.erase 1
 pop temp 0
-push field 2
+push this 2
 push constant 2
 add
-pop field 2
+pop this 2
 push pointer 0
 call Square.draw 1
 pop temp 0
-label L0
+label IF_FALSE0
 push constant 0
 return
 function Square.decSize 0
 push argument 0
 pop pointer 0
-push field 2
+push this 2
 push constant 2
 gt
-not
-if-goto L1
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push pointer 0
 call Square.erase 1
 pop temp 0
-push field 2
+push this 2
 push constant 2
 sub
-pop field 2
+pop this 2
 push pointer 0
 call Square.draw 1
 pop temp 0
-label L1
+label IF_FALSE0
 push constant 0
 return
 function Square.moveUp 0
 push argument 0
 pop pointer 0
-push field 1
+push this 1
 push constant 1
 gt
-not
-if-goto L2
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 2
+push this 0
+push this 1
+push this 2
 add
 push constant 1
 sub
-push field 0
-push field 2
+push this 0
+push this 2
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-push field 1
+push this 1
 push constant 2
 sub
-pop field 1
+pop this 1
 push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 0
-push field 2
+push this 0
+push this 1
+push this 0
+push this 2
 add
-push field 1
+push this 1
 push constant 1
 add
 call Screen.drawRectangle 4
 pop temp 0
-label L2
+label IF_FALSE0
 push constant 0
 return
 function Square.moveDown 0
 push argument 0
 pop pointer 0
-push field 1
-push field 2
+push this 1
+push this 2
 add
 push constant 254
 lt
-not
-if-goto L3
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 0
-push field 2
+push this 0
+push this 1
+push this 0
+push this 2
 add
-push field 1
+push this 1
 push constant 1
 add
 call Screen.drawRectangle 4
 pop temp 0
-push field 1
+push this 1
 push constant 2
 add
-pop field 1
+pop this 1
 push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 2
+push this 0
+push this 1
+push this 2
 add
 push constant 1
 sub
-push field 0
-push field 2
+push this 0
+push this 2
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-label L3
+label IF_FALSE0
 push constant 0
 return
 function Square.moveLeft 0
 push argument 0
 pop pointer 0
-push field 0
+push this 0
 push constant 1
 gt
-not
-if-goto L4
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 2
+push this 0
+push this 2
 add
 push constant 1
 sub
-push field 1
-push field 0
-push field 2
+push this 1
+push this 0
+push this 2
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-push field 0
+push this 0
 push constant 2
 sub
-pop field 0
+pop this 0
 push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 0
+push this 0
+push this 1
+push this 0
 push constant 1
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-label L4
+label IF_FALSE0
 push constant 0
 return
 function Square.moveRight 0
 push argument 0
 pop pointer 0
-push field 0
-push field 2
+push this 0
+push this 2
 add
 push constant 510
 lt
-not
-if-goto L5
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
 push constant 0
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 1
-push field 0
+push this 0
+push this 1
+push this 0
 push constant 1
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-push field 0
+push this 0
 push constant 2
 add
-pop field 0
+pop this 0
 push constant 0
 not
 call Screen.setColor 1
 pop temp 0
-push field 0
-push field 2
+push this 0
+push this 2
 add
 push constant 1
 sub
-push field 1
-push field 0
-push field 2
+push this 1
+push this 0
+push this 2
 add
-push field 1
-push field 2
+push this 1
+push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-label L5
+label IF_FALSE0
 push constant 0
 return
